--- a/static/styles/main/stylemobile.css
+++ b/static/styles/main/stylemobile.css
@@ -267,20 +267,21 @@
     .aboutimg img:nth-child(1) {
         position: relative;
         left: 10%;
+        height: 140px;
     }
     /*jewel*/
     .aboutimg img:nth-child(2) {
         position: relative;
         left: 45%;
         bottom: 50px;
-        height: 40px;
+        height: 30px;
     }
     /*shad*/
     .aboutimg img:nth-child(3) {
         position: relative;
         right: 20%;
         bottom: -20px;
-        height: 180px;
+        height: 140px;
     }
     /*boy*/
     .about .aboutimg img:nth-child(4) {
